logs/Slang/generated/hdlconv/hdlconvertor_p753_2.sv.log
name: hdlconvertor_p753_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:3:13: error: identifier 'SIZE' used before its declaration
    output [SIZE-1:0] sum;
            ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:2:15: note: declared here
    parameter SIZE = 4;
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:5:12: error: identifier 'SIZE' used before its declaration
    input [SIZE-1:0] a, b;
           ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:2:15: note: declared here
    parameter SIZE = 4;
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:25:9: error: expected member
        xor g1 ( t[1][i],a[i],b[i]);
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:26:9: error: expected member
        xor g2 ( sum[i], t[1][i],c[i]);
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:27:9: error: expected member
        and g3 ( t[2][i],a[i],b[i]);
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:28:9: error: expected member
        and g4 ( t[3][i], t[1][i],c[i]);
        ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_2.sv:29:9: error: expected member
        or g5 (c[i+1], t[2][i], t[3][i]);
        ^~
